🐛 Fix z-index of splash

--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -61,4 +61,5 @@
   font-size: 132px;
   animation: hideSplashScreen 0.3s ease-in-out forwards;
   animation-delay: 0.5s;
+  z-index: 50;
 }
